--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 
           <li class="social-item">
             <a href="#" class="social-link">
-              <ion-icon name="logo-twitter"></ion-icon>
+              <ion-icon name="logo-linkedln"></ion-icon>
             </a>
           </li>
 
