--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 
           <li class="social-item">
             <a href="#" class="social-link">
-              <ion-icon name="logo-linkedln"></ion-icon>
+              <ion-icon name="logo-linkedin"></ion-icon>
             </a>
           </li>
 
@@ -209,18 +209,12 @@
 
         <section class="about-text">
           <p>
-            I'm Creative Director and UI/UX Designer from Sydney, Australia, working in web development and print media.
-            I enjoy
-            turning complex problems into simple, beautiful and intuitive designs.
+            A 4th-semester Telecommunication Engineering student at Telkom University with a GPA of 3.89, currently
+            active as a Research Assistant in the Adaptive Network Lab. Experienced as a mentor in NetDevelopment and
+            speaker in Adaptive Training, with a focus on computer networks, SDN, IoT, and monitoring tools like Grafana
+            & Prometheus. Passionate about building technical solutions using Python and Linux-based networking systems.
           </p>
 
-          <p>
-            My job is to build your website so that it is functional and user-friendly but at the same time attractive.
-            Moreover, I
-            add personal touch to your product and make sure that is eye-catching and easy to use. My aim is to bring
-            across your
-            message and identity in the most creative way. I created web design for many famous brand companies.
-          </p>
         </section>
 
 
@@ -242,10 +236,10 @@
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Web design</h4>
+                <h4 class="h4 service-item-title">Researcher</h4>
 
                 <p class="service-item-text">
-                  The most modern and high-quality design made at a professional level.
+                  Doing research in Adaptive Network Lab, focusing on computer networks, SDN, IoT, and monitoring tools.
                 </p>
               </div>
 
@@ -258,10 +252,10 @@
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Web development</h4>
+                <h4 class="h4 service-item-title">Network Engineer</h4>
 
                 <p class="service-item-text">
-                  High-quality development of sites at the professional level.
+                  Still learning and developing skills in network engineering, Have experience in routing, switching, and network subnetting.
                 </p>
               </div>
 
@@ -270,14 +264,14 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./assets/images/icon-app.svg" alt="mobile app icon" width="40">
+                <img src="./assets/images/icon-dev.svg" alt="mobile app icon" width="40">
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Mobile apps</h4>
+                <h4 class="h4 service-item-title">Web developing</h4>
 
                 <p class="service-item-text">
-                  Professional development of applications for iOS and Android.
+                  Still learning and developing skills in web development, Have experience in Django, and React.
                 </p>
               </div>
 
@@ -286,19 +280,18 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./assets/images/icon-photo.svg" alt="camera icon" width="40">
+                <img src="./assets/images/Study.png" alt="camera icon" width="40">
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Photography</h4>
+                <h4 class="h4 service-item-title">Study</h4>
 
                 <p class="service-item-text">
-                  I make high-quality photos of any category at a professional level.
+                  Studying in Telkom University, focusing on Telecommunication Engineering. 
                 </p>
               </div>
 
             </li>
-
           </ul>
 
         </section>
@@ -308,7 +301,7 @@
           - testimonials
         -->
 
-        <section class="testimonials">
+        <!-- <section class="testimonials">
 
           <h3 class="h3 testimonials-title">Testimonials</h3>
 
@@ -405,7 +398,7 @@
           </ul>
 
         </section>
-
+ -->
 
         <!--
           - testimonials modal
@@ -456,7 +449,7 @@
           - clients
         -->
 
-        <section class="clients">
+       <!--  <section class="clients">
 
           <h3 class="h3 clients-title">Clients</h3>
 
@@ -500,7 +493,7 @@
 
           </ul>
 
-        </section>
+        </section> -->
 
       </article>
 
@@ -532,44 +525,28 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">University school of the arts</h4>
+              <h4 class="h4 timeline-item-title">SMAN 1 NGAWI</h4>
 
-              <span>2007 — 2008</span>
+              <span>2021 — 2023</span>
 
               <p class="timeline-text">
-                Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et
-                quas molestias
-                exceptur.
+                I completed my high school education at SMAN 1 NGAWI through an accelerated program, focusing on science subjects and graduating in just two years.
               </p>
 
             </li>
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">New york academy of art</h4>
+              <h4 class="h4 timeline-item-title">Telkom University</h4>
 
-              <span>2006 — 2007</span>
+              <span>2023 — Present</span>
 
               <p class="timeline-text">
-                Ratione voluptatem sequi nesciunt, facere quisquams facere menda ossimus, omnis voluptas assumenda est
-                omnis..
+                Currently pursuing a Bachelor's degree in Telecommunication Engineering at Telkom University. 
               </p>
 
             </li>
 
-            <li class="timeline-item">
-
-              <h4 class="h4 timeline-item-title">High school of art and design</h4>
-
-              <span>2002 — 2004</span>
-
-              <p class="timeline-text">
-                Duis aute irure dolor in reprehenderit in voluptate, quila voluptas mag odit aut fugit, sed consequuntur
-                magni dolores
-                eos.
-              </p>
-
-            </li>
 
           </ol>
 
@@ -589,42 +566,36 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Creative director</h4>
+              <h4 class="h4 timeline-item-title">NetDevelopment</h4>
 
-              <span>2015 — Present</span>
+              <span>Jan 2024 — Jun 2024</span>
 
               <p class="timeline-text">
-                Nemo enim ipsam voluptatem blanditiis praesentium voluptum delenit atque corrupti, quos dolores et qvuas
-                molestias
-                exceptur.
+                NetDevelopment is Internship program in Adaptive Network Laboratory that selected a candidate to be a Research Assistant. I have been selected as a Research Assistant in Adaptive Network Lab.
               </p>
 
             </li>
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Art director</h4>
+              <h4 class="h4 timeline-item-title">Researcch Assistant</h4>
 
-              <span>2013 — 2015</span>
+              <span>2024 — Present</span>
 
               <p class="timeline-text">
-                Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et
-                quas molestias
-                exceptur.
+                Currently working as a Research Assistant in Adaptive Network Lab, focusing on SDN in IoT Networks. 
               </p>
 
             </li>
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Web designer</h4>
+              <h4 class="h4 timeline-item-title">Head of Research</h4>
 
-              <span>2010 — 2013</span>
+              <span>2025 — Present</span>
 
               <p class="timeline-text">
-                Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et
-                quas molestias
-                exceptur.
+                believed to be able to manage research assistants and lead research projects effectively. I have been selected as a Head of Research in Adaptive Network Lab.
               </p>
 
             </li>
@@ -642,7 +613,7 @@
             <li class="skills-item">
 
               <div class="title-wrapper">
-                <h5 class="h5">Web design</h5>
+                <h5 class="h5">Networking</h5>
                 <data value="80">80%</data>
               </div>
 
@@ -655,7 +626,7 @@
             <li class="skills-item">
 
               <div class="title-wrapper">
-                <h5 class="h5">Graphic design</h5>
+                <h5 class="h5">Web Development</h5>
                 <data value="70">70%</data>
               </div>
 
@@ -668,12 +639,12 @@
             <li class="skills-item">
 
               <div class="title-wrapper">
-                <h5 class="h5">Branding</h5>
-                <data value="90">90%</data>
+                <h5 class="h5">Public Speaking</h5>
+                <data value="80">80%</data>
               </div>
 
               <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 90%;"></div>
+                <div class="skill-progress-fill" style="width: 80%;"></div>
               </div>
 
             </li>
@@ -681,12 +652,12 @@
             <li class="skills-item">
 
               <div class="title-wrapper">
-                <h5 class="h5">WordPress</h5>
-                <data value="50">50%</data>
+                <h5 class="h5">Team work</h5>
+                <data value="80">80%</data>
               </div>
 
               <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 50%;"></div>
+                <div class="skill-progress-fill" style="width: 80%;"></div>
               </div>
 
             </li>
