--- a/index.html
+++ b/index.html
@@ -599,6 +599,17 @@
               </p>
 
             </li>
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">Trainer at Adaptive Training</h4>
+
+              <span>Jan 2025 — Mar 2025</span>
+
+              <p class="timeline-text">
+                I have been selected as a Trainer in Adaptive Training, where I will be teaching about Monitoring Tools such as Grafana and Prometheus.
+              </p>
+
+            </li>
 
           </ol>
 
