add some photos

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <div class="sidebar-info">
 
         <figure class="avatar-box">
-          <img src="./assets/images/my-avatar.png" alt="Rafi Gunawan" width="80">
+          <img src="./assets/images/foto porto .jpg" alt="Rafi Gunawan" width="80">
         </figure>
 
         <div class="info-content">
@@ -702,16 +702,16 @@
             </li>
 
             <li class="filter-item">
-              <button data-filter-btn>Web design</button>
+              <button data-filter-btn>Certificate</button>
             </li>
 
             <li class="filter-item">
-              <button data-filter-btn>Applications</button>
+              <button data-filter-btn>Experience</button>
             </li>
 
-            <li class="filter-item">
-              <button data-filter-btn>Web development</button>
-            </li>
+            <!-- <li class="filter-item">
+              <button data-filter-btn></button>
+            </li> -->
 
           </ul>
 
