--- a/index.html
+++ b/index.html
@@ -749,7 +749,7 @@
 
           </div>
 
-          <ul class="project-list">
+          <!-- <ul class="project-list">
 
             <li class="project-item  active" data-filter-item data-category="web development">
               <a href="#">
@@ -913,7 +913,7 @@
               </a>
             </li>
 
-          </ul>
+          </ul> -->
 
         </section>
 
@@ -935,7 +935,7 @@
 
         <section class="blog-posts">
 
-          <ul class="blog-posts-list">
+          <!-- <ul class="blog-posts-list">
 
             <li class="blog-post-item">
               <a href="#">
@@ -1105,7 +1105,7 @@
               </a>
             </li>
 
-          </ul>
+          </ul> -->
 
         </section>
 
@@ -1127,9 +1127,7 @@
 
         <section class="mapbox" data-mapbox>
           <figure>
-            <iframe
-              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d199666.5651251294!2d-121.58334177520186!3d38.56165006739519!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x809ac672b28397f9%3A0x921f6aaa74197fdb!2sSacramento%2C%20CA%2C%20USA!5e0!3m2!1sen!2sbd!4v1647608789441!5m2!1sen!2sbd"
-              width="400" height="300" loading="lazy"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d29484.04577064446!2d107.63470508802112!3d-6.978848661327249!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e68e9adf177bf8d%3A0x437398556f9fa03!2sUniversitas%20Telkom!5e0!3m2!1sid!2sid!4v1756314230835!5m2!1sid!2sid" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
           </figure>
         </section>
 
