add something new

--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 
         <section class="about-text">
           <p>
-            A 4th-semester Telecommunication Engineering student at Telkom University with a GPA of 3.89, currently
+            A 5th-semester Telecommunication Engineering student at Telkom University with a GPA of 3.89, currently
             active as a Research Assistant in the Adaptive Network Lab. Experienced as a mentor in NetDevelopment and
             speaker in Adaptive Training, with a focus on computer networks, SDN, IoT, and monitoring tools like Grafana
             & Prometheus. Passionate about building technical solutions using Python and Linux-based networking systems.
@@ -268,7 +268,7 @@
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Web developing</h4>
+                <h4 class="h4 service-item-title">Web Development</h4>
 
                 <p class="service-item-text">
                   Still learning and developing skills in web development, Have experience in Django, and React.
@@ -284,10 +284,10 @@
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Study</h4>
+                <h4 class="h4 service-item-title">DevOps Enthusiast</h4>
 
                 <p class="service-item-text">
-                  Studying in Telkom University, focusing on Telecommunication Engineering. 
+                  Currently enrolled in an intensive DevOps program to gain hands-on experience in building and managing scalable systems, including CI/CD pipelines, container orchestration, and Infrastructure as Code.
                 </p>
               </div>
 
@@ -587,6 +587,17 @@
               </p>
 
             </li>
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">Intern Research</h4>
+
+              <span>July 2025 — August 2025</span>
+
+              <p class="timeline-text">
+                Learning and researching about 5G networks, RAN, OpenRAN at Telecom Infra Project 
+              </p>
+
+            </li>
 
             <li class="timeline-item">
 
@@ -607,6 +618,17 @@
 
               <p class="timeline-text">
                 I have been selected as a Trainer in Adaptive Training, where I will be teaching about Monitoring Tools such as Grafana and Prometheus.
+              </p>
+
+            </li>
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">Intensive DevOps Program</h4>
+
+              <span>Nov 2025 — Present</span>
+
+              <p class="timeline-text">
+                Currently enrolled in a comprehensive, industry-based DevOps program designed to bridge my background in network research and monitoring with full-stack infrastructure automation. This intensive curriculum provides deep, hands-on experience in building and managing scalable systems, including CI/CD pipelines (Jenkins and GitLab), container orchestration with Docker and Kubernetes, and Infrastructure as Code using Terraform. The program covers multi-cloud services on AWS and GCP, advanced DevSecOps practices, and expands upon my practical experience with advanced monitoring systems.
               </p>
 
             </li>
@@ -637,7 +659,7 @@
             <li class="skills-item">
 
               <div class="title-wrapper">
-                <h5 class="h5">Web Development</h5>
+                <h5 class="h5">IT Environment</h5>
                 <data value="70">70%</data>
               </div>
 
@@ -650,7 +672,7 @@
             <li class="skills-item">
 
               <div class="title-wrapper">
-                <h5 class="h5">Public Speaking</h5>
+                <h5 class="h5">Communication</h5>
                 <data value="80">80%</data>
               </div>
 
@@ -709,9 +731,9 @@
               <button data-filter-btn>Experience</button>
             </li>
 
-            <!-- <li class="filter-item">
+             <li class="filter-item">
               <button data-filter-btn></button>
-            </li> -->
+            </li> 
 
           </ul>
 
@@ -734,186 +756,112 @@
               </li>
 
               <li class="select-item">
-                <button data-select-item>Web design</button>
+                <button data-select-item>Certificate</button>
               </li>
 
               <li class="select-item">
-                <button data-select-item>Applications</button>
+                <button data-select-item>Competition</button>
               </li>
 
               <li class="select-item">
-                <button data-select-item>Web development</button>
+                <button data-select-item>Projects</button>
               </li>
 
             </ul>
 
           </div>
 
-          <!-- <ul class="project-list">
+          <ul class="project-list">
 
-            <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="#">
+  <!-- Project: Pemateri Adaptive Training - Monitoring -->
+  <li class="project-item active" data-filter-item data-category="certificate">
+    <a href="./assets/images/PemateriMonitoring.pdf" target="_blank" rel="noopener">
 
-                <figure class="project-img">
-                  <div class="project-item-icon-box">
-                    <ion-icon name="eye-outline"></ion-icon>
-                  </div>
+      <figure class="project-img" style="display:flex;align-items:center;justify-content:center;background:#f5f5f5;height:180px;">
+        <!-- Inline SVG sebagai thumbnail/pdf-icon -->
+        <svg width="64" height="64" viewBox="0 0 24 24" fill="none" aria-hidden="true">
+          <rect width="24" height="24" rx="4" fill="#E74C3C"></rect>
+          <path d="M7 7h6v2H7zM7 11h10v2H7zM7 15h10v2H7z" fill="#fff"></path>
+        </svg>
+      </figure>
 
-                  <img src="./assets/images/project-1.jpg" alt="finance" loading="lazy">
-                </figure>
+      <h3 class="project-title">Mentor of Adaptive Training — Monitoring</h3>
 
-                <h3 class="project-title">Finance</h3>
+      <p class="project-category">Certificate / Speaker</p>
 
-                <p class="project-category">Web development</p>
+    </a>
+  </li>
 
-              </a>
-            </li>
+  <!-- Project: Mentor (Sertifikat NetDevelopment 2025) -->
+  <li class="project-item active" data-filter-item data-category="certificate">
+    <a href="./assets/images/Mentor_rafi.pdf" target="_blank" rel="noopener">
 
-            <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="#">
+      <figure class="project-img" style="display:flex;align-items:center;justify-content:center;background:#f5f5f5;height:180px;">
+        <svg width="64" height="64" viewBox="0 0 24 24" fill="none" aria-hidden="true">
+          <rect width="24" height="24" rx="4" fill="#3498DB"></rect>
+          <path d="M7 7h10v2H7zM7 11h10v2H7zM7 15h10v2H7z" fill="#fff"></path>
+        </svg>
+      </figure>
 
-                <figure class="project-img">
-                  <div class="project-item-icon-box">
-                    <ion-icon name="eye-outline"></ion-icon>
-                  </div>
+      <h3 class="project-title">NetDevelopment 2025 — Mentor</h3>
 
-                  <img src="./assets/images/project-2.png" alt="orizon" loading="lazy">
-                </figure>
+      <p class="project-category">Certificate</p>
 
-                <h3 class="project-title">Orizon</h3>
+    </a>
+  </li>
+  <!-- Project: Course (Sertifikat CCNA 2025) -->
+  <li class="project-item active" data-filter-item data-category="certificate">
+    <a href="./assets/images/ccna.pdf" target="_blank" rel="noopener">
 
-                <p class="project-category">Web development</p>
+      <figure class="project-img" style="display:flex;align-items:center;justify-content:center;background:#f5f5f5;height:180px;">
+        <svg width="64" height="64" viewBox="0 0 24 24" fill="none" aria-hidden="true">
+          <rect width="24" height="24" rx="4" fill="#3498DB"></rect>
+          <path d="M7 7h10v2H7zM7 11h10v2H7zM7 15h10v2H7z" fill="#fff"></path>
+        </svg>
+      </figure>
 
-              </a>
-            </li>
+      <h3 class="project-title">CCNA by Cisco</h3>
 
-            <li class="project-item  active" data-filter-item data-category="web design">
-              <a href="#">
+      <p class="project-category">Certificate</p>
 
-                <figure class="project-img">
-                  <div class="project-item-icon-box">
-                    <ion-icon name="eye-outline"></ion-icon>
-                  </div>
+    </a>
+  </li>
+  <!-- Project: Course (Sertifikat CCNA 2025) -->
+  <li class="project-item active" data-filter-item data-category="certificate">
+    <a href="./assets/images/huawei.jpeg" target="_blank" rel="noopener">
 
-                  <img src="./assets/images/project-3.jpg" alt="fundo" loading="lazy">
-                </figure>
+      <figure class="project-img" style="display:flex;align-items:center;justify-content:center;background:#f5f5f5;height:180px;">
+        <svg width="64" height="64" viewBox="0 0 24 24" fill="none" aria-hidden="true">
+          <rect width="24" height="24" rx="4" fill="#3498DB"></rect>
+          <path d="M7 7h10v2H7zM7 11h10v2H7zM7 15h10v2H7z" fill="#fff"></path>
+        </svg>
+      </figure>
 
-                <h3 class="project-title">Fundo</h3>
+      <h3 class="project-title">HCIA by Huawei</h3>
 
-                <p class="project-category">Web design</p>
+      <p class="project-category">Certificate</p>
 
-              </a>
-            </li>
+    </a>
+  </li>
+  <!-- Project: Course (Sertifikat CCNA 2025) -->
+  <li class="project-item active" data-filter-item data-category="experience">
+    <a href="./assets/images/HackathonFinalisPaloAlto.pdf" target="_blank" rel="noopener">
 
-            <li class="project-item  active" data-filter-item data-category="applications">
-              <a href="#">
+      <figure class="project-img" style="display:flex;align-items:center;justify-content:center;background:#f5f5f5;height:180px;">
+        <svg width="64" height="64" viewBox="0 0 24 24" fill="none" aria-hidden="true">
+          <rect width="24" height="24" rx="4" fill="#3498DB"></rect>
+          <path d="M7 7h10v2H7zM7 11h10v2H7zM7 15h10v2H7z" fill="#fff"></path>
+        </svg>
+      </figure>
 
-                <figure class="project-img">
-                  <div class="project-item-icon-box">
-                    <ion-icon name="eye-outline"></ion-icon>
-                  </div>
+      <h3 class="project-title">TOP7 Finalis Hackathon - Palo Alto</h3>
 
-                  <img src="./assets/images/project-4.png" alt="brawlhalla" loading="lazy">
-                </figure>
+      <p class="project-category">Competition</p>
 
-                <h3 class="project-title">Brawlhalla</h3>
+    </a>
+  </li>
 
-                <p class="project-category">Applications</p>
-
-              </a>
-            </li>
-
-            <li class="project-item  active" data-filter-item data-category="web design">
-              <a href="#">
-
-                <figure class="project-img">
-                  <div class="project-item-icon-box">
-                    <ion-icon name="eye-outline"></ion-icon>
-                  </div>
-
-                  <img src="./assets/images/project-5.png" alt="dsm." loading="lazy">
-                </figure>
-
-                <h3 class="project-title">DSM.</h3>
-
-                <p class="project-category">Web design</p>
-
-              </a>
-            </li>
-
-            <li class="project-item  active" data-filter-item data-category="web design">
-              <a href="#">
-
-                <figure class="project-img">
-                  <div class="project-item-icon-box">
-                    <ion-icon name="eye-outline"></ion-icon>
-                  </div>
-
-                  <img src="./assets/images/project-6.png" alt="metaspark" loading="lazy">
-                </figure>
-
-                <h3 class="project-title">MetaSpark</h3>
-
-                <p class="project-category">Web design</p>
-
-              </a>
-            </li>
-
-            <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="#">
-
-                <figure class="project-img">
-                  <div class="project-item-icon-box">
-                    <ion-icon name="eye-outline"></ion-icon>
-                  </div>
-
-                  <img src="./assets/images/project-7.png" alt="summary" loading="lazy">
-                </figure>
-
-                <h3 class="project-title">Summary</h3>
-
-                <p class="project-category">Web development</p>
-
-              </a>
-            </li>
-
-            <li class="project-item  active" data-filter-item data-category="applications">
-              <a href="#">
-
-                <figure class="project-img">
-                  <div class="project-item-icon-box">
-                    <ion-icon name="eye-outline"></ion-icon>
-                  </div>
-
-                  <img src="./assets/images/project-8.jpg" alt="task manager" loading="lazy">
-                </figure>
-
-                <h3 class="project-title">Task Manager</h3>
-
-                <p class="project-category">Applications</p>
-
-              </a>
-            </li>
-
-            <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="#">
-
-                <figure class="project-img">
-                  <div class="project-item-icon-box">
-                    <ion-icon name="eye-outline"></ion-icon>
-                  </div>
-
-                  <img src="./assets/images/project-9.png" alt="arrival" loading="lazy">
-                </figure>
-
-                <h3 class="project-title">Arrival</h3>
-
-                <p class="project-category">Web development</p>
-
-              </a>
-            </li>
-
-          </ul> -->
+</ul>
 
         </section>
 
