add location and remove contact

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
           </li>
 
           <li class="navbar-item">
-            <button class="navbar-link" data-nav-link>Contact</button>
+            <button class="navbar-link" data-nav-link>Location</button>
           </li>
 
         </ul>
@@ -1067,10 +1067,10 @@
         - #CONTACT
       -->
 
-      <article class="contact" data-page="contact">
+      <article class="contact" data-page="location">
 
         <header>
-          <h2 class="h2 article-title">Contact</h2>
+          <h2 class="h2 article-title">Location</h2>
         </header>
 
         <section class="mapbox" data-mapbox>
@@ -1079,7 +1079,7 @@
           </figure>
         </section>
 
-        <section class="contact-form">
+        <!-- <section class="contact-form">
 
           <h3 class="h3 form-title">Contact Form</h3>
 
@@ -1100,7 +1100,7 @@
 
           </form>
 
-        </section>
+        </section> -->
 
       </article>
 
