--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
           </li>
 
           <li class="social-item">
-            <a href="#" class="social-link">
+            <a href="https://www.linkedin.com/in/muhammad-rafi-gunawan-625189265/?profileId=ACoAAED85D0Bh3YRTLz1Xtjd8zgzF_IMePMLFh4" class="social-link">
               <ion-icon name="logo-linkedin"></ion-icon>
             </a>
           </li>
