Fix CV section: rename file to proper .pdf format and prevent auto-download

--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
 
         <section class="about-text">
           <p>
-            A 5th-semester Telecommunication Engineering student at Telkom University with a GPA of 3.89, currently
+            A 5th-semester Telecommunication Engineering student at Telkom University with a GPA of 3.84, currently
             active as a Research Assistant in the Adaptive Network Lab. Experienced as a mentor in NetDevelopment and
             speaker in Adaptive Training, with a focus on computer networks, SDN, IoT, and monitoring tools like Grafana
             & Prometheus. Passionate about building technical solutions using Python and Linux-based networking systems.
@@ -1602,20 +1602,23 @@
 
           <!-- Embedded PDF Viewer -->
           <div class="cv-embed-container">
-            <iframe src="./assets/images/CV ATS MUHAMMAD RAFI GUNAWAN" type="application/pdf" width="100%" height="850">
+            <object data="./assets/images/CV_Muhammad_Rafi_Gunawan.pdf" type="application/pdf" width="100%"
+              height="850">
+              <embed src="./assets/images/CV_Muhammad_Rafi_Gunawan.pdf" type="application/pdf" width="100%"
+                height="850">
               <p>Your browser does not support PDF viewing. Please download the CV using the button below.</p>
-            </iframe>
+            </object>
           </div>
 
           <!-- Action Buttons -->
           <div class="cv-actions">
-            <a href="./assets/images/CV ATS MUHAMMAD RAFI GUNAWAN" download="CV_Muhammad_Rafi_Gunawan.pdf"
+            <a href="./assets/images/CV_Muhammad_Rafi_Gunawan.pdf" download="CV_Muhammad_Rafi_Gunawan.pdf"
               class="form-btn cv-download-btn">
               <ion-icon name="download-outline"></ion-icon>
               <span>Download PDF</span>
             </a>
 
-            <a href="./assets/images/CV ATS MUHAMMAD RAFI GUNAWAN" target="_blank" class="form-btn cv-view-btn">
+            <a href="./assets/images/CV_Muhammad_Rafi_Gunawan.pdf" target="_blank" class="form-btn cv-view-btn">
               <ion-icon name="open-outline"></ion-icon>
               <span>Open in New Tab</span>
             </a>
